# autorandr-rs

./: Cargo.toml  Readme.md  build.rs  example-config.kdl  example-config.toml  flake.nix  shell.nix
man/: autorandr-rs.1.scd  autorandr-rs.5.scd  autorandrd.1.scd  autorandrd.5.scd  monitor-layout.1.scd  monitor-layout.5.scd  randr-edid.1.scd
src/: app.rs  config.rs  lib.rs  main.rs
src/commands/: daemon.rs  mod.rs  print_edids.rs
