[package]
name = "monitor-layout"
version = "0.3.0"
authors = ["Jimmy Brisson <theotherjimmy@gmail.com>"]
edition = "2018"

[dependencies]
edid = "0.3"
nom = "3.2.0"
kdl = "3.0.0"
thiserror = "1.0"
clap = "2.33"
ansi_term = "0.11"
tracing = "0.1.29"

[dependencies.tracing-subscriber]
version = "0.3.1"
default-features = false
features = [ "std", "fmt", "ansi" ]

[dependencies.miette]
version = "3.2.0"
features = [ "fancy" ]

[dependencies.x11rb]
version = "0.8"
default-features = false
features = [ "randr" ]

[build-dependencies]
clap = "2.33"
